尝试去除runtime.waitfor死锁
git-svn-id: https://cmwrap.googlecode.com/svn/trunk@416 76e3dd0e-3f09-11de-917f-4137a9cc17b9